tests/ui/closures/binder/disallow-ty.stderr
error[E0658]: only lifetime parameters can be used in this context
  --> $DIR/disallow-ty.rs:4:9
   |
LL |     for<T> || -> () {};
   |         ^
   |
   = note: see issue #108185 <https://github.com/rust-lang/rust/issues/108185> for more information
   = help: add `#![feature(non_lifetime_binders)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
